--- a/Covid_case_detection.ipynb
+++ b/Covid_case_detection.ipynb
@@ -13,11 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Predicting new COVID cases from mobility data using hybrid of ID3 and CART Regresssor\n",
-        "\n",
-        "Authors : \n",
-        "- Shubham Awasthi (2019UCH0024)\n",
-        "- Shreyas Chatterjee (2019UCS0097)"
+        "# Predicting new COVID cases from mobility data using hybrid of ID3 and CART Regresssor\n"
       ],
       "metadata": {
         "id": "8nAAQW7jwczY"
